--- a/index.html
+++ b/index.html
@@ -543,5 +543,21 @@
             document.querySelector('.nav-menu').classList.toggle('active');
         });
     </script>
+<script src="/ik.js"></script>
+<div class="related"><h3>Related Posts</h3><ul>
+<li><a href="/5-jenis-aglaonema-termahal">5 Jenis Aglaonema Termahal</a></li>
+<li><a href="/2acc">2Acc</a></li>
+<li><a href="/101-bandara">101 Bandara</a></li>
+<li><a href="/21-adab-untuk-abad-21-pdf">21 Adab Untuk Abad 21 Pdf</a></li>
+<li><a href="/0-km-sabang">0 Km Sabang</a></li>
+<li><a href="/7-barber">7 Barber</a></li>
+<li><a href="/2-bar">2 Bar</a></li>
+<li><a href="/3-in-1-barbershop">3 In 1 Barbershop</a></li>
+<li><a href="/1-adab">1 Adab</a></li>
+<li><a href="/98-barber-shop">98 Barber Shop</a></li>
+<li><a href="/10-aglonema-termahal">10 Aglonema Termahal</a></li>
+<li><a href="/2bar">2Bar</a></li>
+</ul></div>
+<div style="text-align:center; margin:30px 0;"><a href="/" style="text-decoration:none; font-size:18px;">🏠 Homepage</a></div>
 </body>
 </html>
